--- a/AA/TD2/numpy_ndarray_memo.ipynb
+++ b/AA/TD2/numpy_ndarray_memo.ipynb
@@ -39,10 +39,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -75,26 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 51,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "l = [5,1,2,3]\n",
-    "l.pop(0)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -105,9 +92,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
@@ -130,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -152,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false
    },
@@ -189,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -198,8 +186,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.93009397 0.20617684]\n",
-      " [0.62136029 0.79739278]]\n"
+      "[[0.12155836 0.6627983 ]\n",
+      " [0.0362943  0.43255524]]\n"
      ]
     }
    ],
@@ -210,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -271,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
@@ -303,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 58,
    "metadata": {
     "collapsed": false
    },
@@ -338,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 59,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -435,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 61,
    "metadata": {
     "collapsed": false
    },
@@ -475,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 62,
    "metadata": {
     "collapsed": false
    },
@@ -523,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -554,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 64,
    "metadata": {
     "collapsed": false
    },
@@ -595,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -638,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -672,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 67,
    "metadata": {
     "collapsed": false
    },
@@ -715,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 68,
    "metadata": {
     "collapsed": false
    },
@@ -734,7 +722,7 @@
        "array([ 3, 12])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 69,
    "metadata": {
     "collapsed": false
    },
@@ -798,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -845,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 71,
    "metadata": {
     "collapsed": true
    },
@@ -856,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 72,
    "metadata": {
     "collapsed": false
    },
@@ -916,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 73,
    "metadata": {
     "collapsed": false
    },
@@ -946,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
@@ -986,32 +974,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0 1]\n",
-      " [2 3]\n",
-      " [4 5]]\n",
-      "[10 11 12]\n",
-      "[ 70 103]\n",
-      "(2,)\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "shapes (3,2) and (3,) not aligned: 2 (dim 1) != 3 (dim 0)",
+     "ename": "AttributeError",
+     "evalue": "module 'numpy' has no attribute 'eExemplarange'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-50-009ca922418a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0md\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 16\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mM\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# erreur, POURQUOI?\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m: shapes (3,2) and (3,) not aligned: 2 (dim 1) != 3 (dim 0)"
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-75-c3eb02b8df0c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# => reshape en vecteur ligne: (1,n)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m \u001b[0mM\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m6\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m \u001b[0mv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0meExemplarange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m10\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mM\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'eExemplarange'"
      ]
     }
    ],
