--- a/AA/M1_AA_TD_pytorch/gadioux_pytorch.ipynb
+++ b/AA/M1_AA_TD_pytorch/gadioux_pytorch.ipynb
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -364,35 +364,35 @@
      "text": [
       "{'la': 4, 'cafeteria': 5, 'to': 8, 'good': 19, 'Give': 6, 'at': 22, 'No': 9, 'gusta': 1, 'en': 3, 'a': 18, 'comer': 2, 'not': 17, 'on': 25, 'creo': 10, 'get': 20, 'que': 11, 'lost': 21, 'it': 7, 'me': 0, 'sea': 12, 'Yo': 23, 'is': 16, 'una': 13, 'buena': 14, 'si': 24, 'idea': 15}\n",
       "Parameter containing:\n",
-      "tensor([[ 0.1194,  0.0609, -0.1268,  0.1274,  0.1191,  0.1739, -0.1099, -0.0323,\n",
-      "         -0.0038,  0.0286, -0.1488, -0.1392,  0.1067, -0.0460,  0.0958,  0.0112,\n",
-      "          0.0644,  0.0431,  0.0713,  0.0972, -0.1816,  0.0987, -0.1379, -0.1480,\n",
-      "          0.0119, -0.0334],\n",
-      "        [ 0.1152, -0.1136, -0.1743,  0.1427, -0.0291,  0.1103,  0.0630, -0.1471,\n",
-      "          0.0394,  0.0471, -0.1313, -0.0931,  0.0669,  0.0351, -0.0834, -0.0594,\n",
-      "          0.1796, -0.0363,  0.1106,  0.0849, -0.1268, -0.1668,  0.1882,  0.0102,\n",
-      "          0.1344,  0.0406],\n",
-      "        [ 0.0631,  0.1465,  0.1860, -0.1301,  0.0245,  0.1464,  0.1421,  0.1218,\n",
-      "         -0.1419, -0.1412, -0.1186,  0.0246,  0.1955, -0.1239,  0.1045, -0.1085,\n",
-      "         -0.1844, -0.0417,  0.1130,  0.1821, -0.1218,  0.0426,  0.1692,  0.1300,\n",
-      "          0.1222,  0.1394],\n",
-      "        [ 0.1240,  0.0507, -0.1341, -0.1647, -0.0899, -0.0228, -0.1202,  0.0717,\n",
-      "          0.0607, -0.0444,  0.0754,  0.0634,  0.1197,  0.1321, -0.0664,  0.1916,\n",
-      "         -0.0227, -0.0067, -0.1851, -0.1262, -0.1146, -0.0839,  0.1394, -0.0641,\n",
-      "         -0.1466,  0.0755],\n",
-      "        [ 0.0628,  0.1270, -0.1015,  0.0425, -0.0714, -0.0441, -0.1563, -0.0894,\n",
-      "         -0.0601,  0.0839,  0.0358,  0.0484,  0.1957,  0.1911,  0.1338,  0.0062,\n",
-      "         -0.1357,  0.1533, -0.0490, -0.0159, -0.1690, -0.0387, -0.1265,  0.1802,\n",
-      "         -0.1695, -0.1529]], requires_grad=True)\n",
+      "tensor([[-0.1555,  0.1853, -0.1728, -0.0645, -0.1380,  0.0705, -0.1632, -0.0967,\n",
+      "         -0.1246, -0.1205, -0.0916,  0.1928, -0.0160,  0.0598, -0.1947,  0.1744,\n",
+      "         -0.0427, -0.1800,  0.1352, -0.0530,  0.1781, -0.1332, -0.1821, -0.1473,\n",
+      "          0.0850, -0.0220],\n",
+      "        [-0.1817,  0.0364, -0.0125,  0.0709, -0.0998, -0.1400,  0.1337, -0.0944,\n",
+      "          0.1380,  0.1590, -0.1372, -0.0904,  0.0236, -0.1849,  0.0602, -0.0817,\n",
+      "         -0.0870, -0.1516,  0.0917, -0.1250, -0.1568, -0.0516, -0.1092, -0.1907,\n",
+      "          0.0790, -0.0746],\n",
+      "        [ 0.1374,  0.1380, -0.1251, -0.1143, -0.0696,  0.1149, -0.0068, -0.0701,\n",
+      "          0.1215,  0.1860,  0.1450, -0.1500, -0.0407, -0.0376,  0.1674, -0.1014,\n",
+      "         -0.1124,  0.0031, -0.0456,  0.0742,  0.0238, -0.1171,  0.1426,  0.1221,\n",
+      "          0.0429, -0.1775],\n",
+      "        [ 0.0922,  0.1303,  0.0546, -0.0758,  0.0132, -0.0753,  0.1846,  0.1894,\n",
+      "         -0.0229, -0.1319,  0.1154,  0.1001,  0.1040, -0.1476,  0.0665, -0.0837,\n",
+      "         -0.1724, -0.1369,  0.0831,  0.0734, -0.1721,  0.1112,  0.1503,  0.1489,\n",
+      "          0.1107, -0.0308],\n",
+      "        [ 0.1314,  0.1535,  0.1022, -0.1411, -0.0684,  0.1554,  0.1495,  0.1251,\n",
+      "         -0.0820, -0.0388, -0.1461, -0.1118,  0.1505, -0.1610, -0.0485,  0.0416,\n",
+      "         -0.1177,  0.0457, -0.0315,  0.0784, -0.1505,  0.0271, -0.1788,  0.1217,\n",
+      "          0.1905, -0.0700]], requires_grad=True)\n",
       "Parameter containing:\n",
-      "tensor([-0.0067, -0.1060,  0.0702, -0.0755, -0.0921], requires_grad=True)\n",
+      "tensor([ 0.0290, -0.1010, -0.1255, -0.0993, -0.0934], requires_grad=True)\n",
       "Parameter containing:\n",
-      "tensor([[ 0.0253,  0.3237, -0.3146,  0.2100,  0.2873],\n",
-      "        [ 0.4375, -0.3130,  0.1083, -0.3307,  0.3818]], requires_grad=True)\n",
+      "tensor([[ 0.0849, -0.0513,  0.0314, -0.3427, -0.2810],\n",
+      "        [-0.3872, -0.3214,  0.3745,  0.1662, -0.4265]], requires_grad=True)\n",
       "Parameter containing:\n",
-      "tensor([-0.1735,  0.2694], requires_grad=True)\n",
+      "tensor([-0.0746,  0.0359], requires_grad=True)\n",
       "26\n",
-      "tensor([[-1.3215, -0.3102]])\n"
+      "tensor([[-0.8568, -0.5526]])\n"
      ]
     }
    ],
@@ -441,7 +441,7 @@
     "        # then pass that through log_softmax.\n",
     "        # Many non-linearities and other functions are in torch.nn.functional\n",
     "        x1 = self.entrance(bow_vec)\n",
-    "        a1 = F.Tanh(x1)\n",
+    "        a1 = torch.tanh(x1)\n",
     "        x2 = self.exit(a1)\n",
     "        a2 = F.log_softmax(x2, dim=1)\n",
     "        return a2\n",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false
    },
@@ -534,12 +534,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Les log probs tensor([[-1.0162, -0.4494]])\n",
-      "Les log probs tensor([[-1.0367, -0.4379]])\n",
-      "tensor([-0.1488, -0.1313, -0.1186,  0.0754,  0.0358], grad_fn=<SelectBackward>)\n",
-      "Log_probs : tensor([[-0.2113, -1.6584]])\n",
-      "Log_probs : tensor([[-2.7630, -0.0652]])\n",
-      "tensor([-0.2664,  0.0812, -0.2494,  0.2126,  0.0722], grad_fn=<SelectBackward>)\n"
+      "Les log probs tensor([[-0.9074, -0.5168]])\n",
+      "Les log probs tensor([[-0.8763, -0.5384]])\n",
+      "tensor([-0.0916, -0.1372,  0.1450,  0.1154, -0.1461], grad_fn=<SelectBackward>)\n",
+      "Log_probs : tensor([[-0.2154, -1.6411]])\n",
+      "Log_probs : tensor([[-2.2702, -0.1090]])\n",
+      "tensor([ 0.0962, -0.0438, -0.0147, -0.0805, -0.0927], grad_fn=<SelectBackward>)\n"
      ]
     }
    ],
