--- a/exen/Clustering.ipynb
+++ b/exen/Clustering.ipynb
@@ -22,14 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "from sklearn.cluster import MiniBatchKMeans\n",
-    "from sklearn.preprocessing import normalize\n",
     "from sklearn.metrics.pairwise import cosine_similarity as cos_sim\n",
     "\n",
     "from collections import defaultdict\n",
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -130,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -159,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -200,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -307,14 +306,20 @@
     "        self.min_merge -= self.loss\n",
     "        return fail\n",
     "    \n",
+    "    def ender(self, dim) :\n",
+    "        k = 0\n",
+    "        while not self.add_vector([0]*dim,None) :\n",
+    "            k+=1\n",
+    "        return k\n",
+    "    \n",
     "    def run_hac(self, vectors) :\n",
     "        order = [i for i in range(len(vectors))]\n",
     "        shuffle(order)\n",
     "        fail = []\n",
-    "        ind = self.init_hac([vectors[i] for i in order[:200]],order[:200])\n",
+    "        ind = self.init_hac([vectors[i] for i in order[:self.batch_size]],order[:self.batch_size])\n",
     "        if ind :\n",
     "            fail.append(ind)\n",
-    "        fail += self.looper(order[200:], vectors)\n",
+    "        fail += self.looper(order[self.batch_size:], vectors)\n",
     "        i = 1\n",
     "        while i < self.max_passe and fail :\n",
     "            print('\\nEchecs, passe', i, ':', len(fail))\n",
@@ -323,14 +328,16 @@
     "            fail = self.looper(fails, vectors)\n",
     "            i+=1\n",
     "        print('\\nEchecs restants :', len(fail))\n",
-    "            \n",
+    "        self.min_merge -= self.loss\n",
+    "        print('Fusions suplémentaires :',self.ender(len(vectors[0])))\n",
     "        return self.clusters\n",
     "    \n",
     "    def labelise(clusters, data_size) :\n",
     "        labels = [-i-1 for i in range(data_size)]\n",
     "        for i, clus in clusters.items():\n",
     "            for ind in clus :\n",
-    "                labels[ind] = i\n",
+    "                if ind :\n",
+    "                    labels[ind] = i\n",
     "        return labels"
    ]
   },
@@ -342,22 +349,28 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Usage de la metric silhouette**\n",
-    "The score is bounded between -1 for incorrect clustering and +1 for highly dense clustering. Scores around zero indicate overlapping clusters.\n",
-    "The score is higher when clusters are dense and well separated, which relates to a standard concept of a cluster.\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false,
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100.00%\n",
+      "Echecs, passe 1 : 3525\n",
+      "100.00%\n",
+      "Echecs, passe 2 : 3244\n",
+      "100.00%\n",
+      "Echecs restants : 2939\n",
+      "Fusions suplémentaires : 71\n",
+      " "
+     ]
+    }
+   ],
    "source": [
     "#### K-means ZONE ####\n",
     "#labels, centroids = run_k_means(good_vecs, nb_cluster)\n",
@@ -365,14 +378,14 @@
     "\n",
     "### TEST ZONE ##\n",
     "\n",
-    "hac = HAC(batch_size = 200, min_merge = 0.50, max_passe = 2, loss = 0.025)\n",
+    "hac = HAC(batch_size = 500, min_merge = 0.7, max_passe = 3, loss = 0.05)\n",
     "\n",
     "%prun hac_clus = HAC.labelise(hac.run_hac(good_vecs), len(good_vecs))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -383,6 +396,15 @@
     "pickle.dump(dic,f)\n",
     "f.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
